Fixed <pre> line wrapping in blog

--- a/static/style.css
+++ b/static/style.css
@@ -176,7 +176,7 @@ code {
 pre {
 	padding: 1em;
 	border-radius: 2px;
-	white-space: pre-line;
+	white-space: pre-wrap;
 	background-color: #0A263C;
 }
 
